--- a/src/static/package.json
+++ b/src/static/package.json
@@ -1,35 +1,22 @@
 {
-  "name": "fullstack-template",
   "version": "1.0.0",
-  "description": "Fullstack Template",
   "main": "index.js",
   "scripts": {
     "build": "webpack -p --progress --config webpack.config.js",
     "dev-build": "webpack --progress -d --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --progress -d --config webpack.config.js --watch"
+    "watch": "webpack --progress -d --config webpack.config.js --watch",
+    "clean": "rm -rf node_modules/ && npm install",
+    "start": "webpack-dev-server --config webpack.config.js --hot"
   },
-  "keywords": [
-    "fullstack",
-    "template",
-    "python",
-    "react",
-    "npm",
-    "webpack"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/angineering/FullStackTemplate.git"
-  },
-  "author": "Angela Branaes",
-  "license": "MIT",
   "babel": {
     "presets": [
       "es2015",
       "react"
     ]
   },
-  "devDependencies": {
+  "dependencies": {
+    "bootstrap": "^4.2.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -39,5 +26,8 @@
     "react-dom": "^16.7.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.14"
   }
 }
