--- a/src/static/package.json
+++ b/src/static/package.json
@@ -15,15 +15,18 @@
     ]
   },
   "dependencies": {
-    "bootstrap": "^4.2.1",
-    "react-bootstrap": "^1.0.0-beta.5",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.2.1",
+    "css-loader": "^2.1.0",
     "npm-check-updates": "^2.15.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.8.1",
+    "reactstrap": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
