--- a/src/static/package.json
+++ b/src/static/package.json
@@ -25,6 +25,7 @@
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
+    "react-router-dom": "^4.3.1",
     "reactstrap": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
