--- a/src/static/package.json
+++ b/src/static/package.json
@@ -12,6 +12,9 @@
     "presets": [
       "es2015",
       "react"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
   },
   "dependencies": {
@@ -32,6 +35,7 @@
     "webpack-cli": "^3.2.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "webpack-dev-server": "^3.1.14"
   }
 }
