--- a/src/static/package.json
+++ b/src/static/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.2.1",
+    "clipboard": "^2.0.4",
     "css-loader": "^2.1.0",
     "npm-check-updates": "^2.15.0",
     "react": "^16.8.1",
