--- a/src/static/package.json
+++ b/src/static/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.2.1",
     "clipboard": "^2.0.4",
     "css-loader": "^2.1.0",
+    "generate-password": "^1.4.1",
     "npm-check-updates": "^2.15.0",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
