--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 atomicwrites==1.3.0
 attrs==19.1.0
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
+coverage==4.5.3
 Flask==1.0.2
 Flask-API==1.1
 Flask-PyMongo==2.2.0
 funcsigs==1.0.2
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 mock==2.0.0
+MongoSanitizer==0.0.1
 more-itertools==5.0.0
+Naked==0.1.31
 passlib==1.7.1
 pathlib2==2.3.3
 pbr==5.1.3
@@ -17,8 +23,13 @@ pluggy==0.9.0
 py==1.8.0
 pycrypto==2.6.1
 PyJWT==1.7.1
-pymongo==3.7.2
+pymongo==3.8.0
 pytest==4.3.1
+python-dateutil==2.8.0
+PyYAML==5.1
+requests==2.21.0
 scandir==1.10.0
+shellescape==3.4.1
 six==1.12.0
+urllib3==1.24.1
 Werkzeug==0.14.1
